--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-swipeable-views": "^0.14.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.11",
+    "remixicon": "latest",
     "sweetalert2": "^11.7.32",
     "swiper": "^10.2.0",
     "uuid": "^9.0.0"
